# haskell-language-server

./: cabal.project
.github/workflows/: bench.yml  test.yml
ghcide/: ghcide.cabal
ghcide/src/Development/IDE/GHC/Compat/: Core.hs
ghcide/src/Development/IDE/Plugin/: TypeLenses.hs
hls-core/: CHANGELOG.md  hls-core.cabal
plugins/hls-local-binding-type-lens-plugin/src/Ide/Plugin/: LocalBindingTypeLens.hs
